--- a/imports/stylesheets/events/event.import.styl
+++ b/imports/stylesheets/events/event.import.styl
@@ -90,8 +90,8 @@ $max-event-details-width = $max-ui-width+300
 .event-name
   margin 0
   font-size 2.25em
-  color $highlight
   font-weight 600
+  color $primary
 
 .edit-event-details
   margin-left 10px
