--- a/imports/stylesheets/globals.import.styl
+++ b/imports/stylesheets/globals.import.styl
@@ -25,7 +25,7 @@ h1
 h2
 h3
 h4
-  color $highlight
+  color $primary-dark
   font-weight 700
 
 h1
@@ -115,6 +115,3 @@ section
 
 .default-fullWidth
   background $ll-gray
-
-.muted-text
-  color darken($l-gray, 20%)
