--- a/imports/stylesheets/modals/modals.import.styl
+++ b/imports/stylesheets/modals/modals.import.styl
@@ -31,7 +31,7 @@ $modal-side-padding = 20px
     margin 0
     font-weight 300
     font-size 2em
-    color $primary
+    color $primary-dark
     text-transform uppercase
   .warning
     margin-top .5em
