--- a/imports/stylesheets/utils.import.styl
+++ b/imports/stylesheets/utils.import.styl
@@ -12,7 +12,7 @@ for $num in -2 -1 0 1 2 3 4 5 6
   margin 0 !important
 
 .muted-text
-  color darken($l-gray, 20%)
+  color darken($m-gray, 20%)
 
 .no-results
   margin-top 1em
